tests/testFiles/semanticErrors/redeclarevar.meme
ermahgerd b = 10;
ermahgerd b;
